--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,6 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "iomanip": "cpp"
-    }
+    },
+    "C_Cpp.default.compilerPath": "C:/mingw64/bin/gcc.exe"
 }
